--- a/package.json
+++ b/package.json
@@ -10,5 +10,30 @@
     "type": "git",
     "url": "https://github.com/marcqualie/depdedupe"
   },
+  "scripts": {
+    "dev": "tsx ./src/cli.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "lint": "biome check",
+    "lint:fix": "biome check --write",
+    "test": "node --import tsx --test src/**/*.test.ts"
+  },
+  "dependencies": {
+    "semver": "^7.7.2",
+    "typescript": "^5.9"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.2.4",
+    "@types/node": "^22.18",
+    "@types/semver": "^7.7.1",
+    "tsx": "^4.20.5"
+  },
+  "bin": {
+    "depdedupe": "dist/cli.js"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "packageManager": "pnpm@10.17.0"
 }
