--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "includes": [
-      "packages/**/*.{ts,tsx}",
+      "src/**/*.{ts,tsx}",
       "biome.json",
       "package.json",
       "packages/*/package.json"
