--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "LICENSE",
+    "README.md"
   ],
   "packageManager": "pnpm@10.17.0"
 }
