--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,26 @@ jobs:
       - run: pnpm run check-types
 
       - run: pnpm run test
+
+  depdedupe:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "24.11"
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: "10.24"
+
+      - run: pnpm install
+
+      # TODO: Replace with depdedupe from npm once published
+      - name: Run depdedupe
+        run: pnpm exec tsx ./src/cli.ts
